--- a/src/main/webapp/static/app.css
+++ b/src/main/webapp/static/app.css
@@ -14,9 +14,12 @@ body {
 	height: 60px; /* Set the fixed height of the footer here */
 	line-height: 60px; /* Vertically center the text there */
 	text-align: center;
-	background-color: #f5f5f5;
+	background-color: #5e6c97;
 }
-
+a #nav_links {
+text-decoration:none;
+color: black;
+}
 button {
   background-color: DodgerBlue; /* Blue background */
   border: none; /* Remove borders */
@@ -28,4 +31,297 @@ button {
 
 .fas{
     font-size: 4rem;
+}
+
+
+
+
+/*Try*/
+* {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    text-decoration: none;
+    font-family: copperplate;
+    /* color: white; */
+}
+body {
+  font-family: copperplate;
+  color: black;
+}
+a {
+  text-decoration: none;
+}
+
+/* Navbar */
+
+header {
+    background-color: rgb(255, 255, 255);
+ /* background: linear-gradient(to bottom right, #03A9F4, #0a4560); */
+    background-color:#5e6c97;
+    box-shadow: inset 0px -13px 25px -27px #000000;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    color: #000;
+
+}
+
+
+
+.logo strong {
+    display: inline-block;
+    padding: 10px;
+    font-size: 1.7rem;
+
+}
+
+.burger {
+    background-color: aliceblue;
+    position: absolute;
+    transform: translateY(-50%);
+    top: 20px;
+    right: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+
+
+.navbar {
+    display: none;
+
+}
+
+.mobile-menu {
+    background-color: rgba(255, 255, 255, 0.379);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.icons {
+    display: flex;
+    padding: 15px;
+
+
+}
+
+.icons a li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 15px;
+}
+
+.links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.links a {
+    padding: 20px;
+}
+
+.links a li {
+    font-size: 1.7rem;
+    display: inline-block;
+    padding: 2px;
+    position: relative;
+}
+
+.links a li::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-out;
+}
+
+.links a li:hover::after {
+    transform: scaleX(1);
+}
+
+
+.icon {
+    font-size: 1.6rem;
+}
+
+
+
+
+
+
+
+
+@media screen and (min-width: 767px) {
+
+    .burger {
+        display: none;
+    }
+
+    header {
+        justify-content: space-between;
+    }
+
+    .logo {
+        padding: 5px 15px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .links {
+        flex-direction: row;
+        margin-right: 5vw;
+    }
+
+    .links a {
+        padding: 0 20px;
+    }
+
+    .icons {
+        padding: 0;
+        order: 2;
+    }
+}
+
+
+
+/*Type-writer */
+#typewriter{
+text-decoration: none!important;
+    color: #446e73;
+    font-size: 40px;
+    font-family: copperplate;
+
+}
+
+.typewriter-div{
+position: absolute;
+    top: 21em;
+    width: 40%;
+        }
+
+.wrap{
+  width:40%
+}
+
+/* Login Modal */
+/*Trigger Button*/
+.login-trigger {
+font-weight: bold;
+    color: white;
+    background: #5e6c97;
+    padding: 15px 30px;
+    border-radius: 10px;
+    position: absolute;
+    top: 76%;
+    font-size: 25px;
+    text-decoration: none;
+}
+
+.login-trigger:hover {
+color: black!important;
+}
+
+#landing-image{
+width: 40%;
+/* margin-right: 0px; */
+position: absolute;
+right: 4em;
+top: 14em;
+}
+
+
+/* font awesome */
+.fa {
+font-size: 26px;
+color: black;
+}
+
+/* Modal */
+.modal {
+color: black;
+}
+
+/* Navbar */
+.header-navbar {
+color: white;
+}
+
+a {
+color: white;
+}
+
+.home-image {
+width: 50%;
+position: absolute;
+right: 5rem;
+}
+
+.home-description {
+position: relative;
+    top: 32vh;
+    font-size: 35px;
+    width: 35vw;}
+
+
+/* brand */
+
+.brand-header {
+margin-top: 1rem
+}
+
+.brand-header-child {
+margin: 0.6rem;
+}
+
+/* Product */
+
+.product-header {
+margin-top: 1rem
+}
+
+.product-header-child {
+margin: 0.6rem;
+}
+
+/* Inventory */
+
+.inventory-header {
+margin-top: 1rem
+}
+
+.inventory-header-child {
+margin: 0.6rem;
+}
+
+/* logo increff */
+.logo-increff-index {
+width: 10%;
+}
+
+.logo-increff-home {
+width: 15%;
 }
